feat: update doc

--- a/go-plugin/configs/transcoders/xr2springcloud/egress_config.json
+++ b/go-plugin/configs/transcoders/xr2springcloud/egress_config.json
@@ -9,6 +9,7 @@
         "matcher_type": "mulit_matcher",
         "config": {
             "name": "xr2springcloud",
+            "enable": true,
             "variables": [
                 {
                     "name": "x-mosn-data-id",
