--- a/go-plugin/configs/transcoders/xr2springcloud/egress_config.json
+++ b/go-plugin/configs/transcoders/xr2springcloud/egress_config.json
@@ -16,16 +16,7 @@
                     "values": [
                         "CIMT000070"
                     ],
-                    "config": {
-                        "details": [
-                            {
-                                "unique_id": "echo",
-                                "path": "/xr2springcloud/echo",
-                                "method": "GET",
-                                "target_app": "http.server"
-                            }
-                        ]
-                    }
+                    "config":"{\"details\":[{\"unique_id\":\"echo\",\"path\":\"/xr2springcloud/echo\",\"method\":\"GET\",\"target_app\":\"http.server\"}]}"
                 }
             ]
         }
