--- a/go-plugin/configs/transcoders/dubbo2springcloud/egress_config.json
+++ b/go-plugin/configs/transcoders/dubbo2springcloud/egress_config.json
@@ -6,7 +6,7 @@
 		"dst_protocol": "springcloud"
 	},
 	"matcher_config": {
-		"matcher_type": "mulit_matcher",
+        "matcher_type": "multiple_matcher",
 		"config": {
 			"name": "dubbo2springcloud",
 			"enable": true,
