--- a/go-plugin/.gitignore
+++ b/go-plugin/.gitignore
@@ -1,7 +1,9 @@
 /build/codecs
 /build/stream_filters
 /build/transcoders
+/build/trace
 /build/sidecar/binary/
 /build/target/
+/build/observability/
 /logs/
 .idea
