--- a/go-plugin/configs/trace/zipkin/config.json
+++ b/go-plugin/configs/trace/zipkin/config.json
@@ -3,7 +3,7 @@
  "service_name": "${APPNAME}",
  "mosn_generator_span_enabled" :"${MOSN_GENERATOR_SAPN_ENABLED}",
  "http":{
-     "batch_size": 0,
+     "batch_size":"${BATCH_SIZE}" ,
      "address": "${ZIPKIN_ADDRESS}"
  },
  "kafka": {
