upgrade project from intellij tool

--- a/go-plugin/Makefile
+++ b/go-plugin/Makefile
@@ -6,6 +6,7 @@ STREAM_FILTER = ${filter}
 TRANSCODER = ${trans}
 
 CODEC_PREFIX	= codec
+CODEC_OUTPUT	= ${CODEC_PREFIX}-${OUTPUT}
 CODEC_ZIP_OUTPUT = ${TARGET}.zip
 TRANSCODER_ZIP_OUTPUT = ${TARGET}.zip
 
@@ -13,9 +14,11 @@ PLUGIN_GOOS = ${GOOS}
 PLUGIN_GOARCH = ${GOARCH}
 
 TRANSCODER_PREFIX = transcoder
+TRANSCODER_OUTPUT = ${TRANSCODER_PREFIX}-${OUTPUT}
 
 STEAM_FILTER_PREFIX = filter
 
+GIT_VERSION 			= $(shell git log -1 --pretty=format:%H | head -c 8)
 PROJECT_NAME			= $(shell head -1 go.mod | cut  -d' ' -f2)
 FULL_PROJECT_NAME		= $(shell pwd)
 
@@ -77,11 +80,13 @@ ant.arm64:
 	GOOS=linux GOARCH=arm64 DOCKER_BUILD_OPTS="--platform=linux/arm64" make ant.arch
 
 pkg-codec:
-    ifeq ("$(os_arch)","Darwin_arm64")
-		DOCKER_BUILD_OPTS="--platform=linux/amd64" make pkg-codec.arch
-    else
-		make pkg-codec.arch
-    endif
+ifeq ("$(os_arch)","Darwin_arm64")
+	make pkg-codec.amd64
+else ifeq ("$(os_arch)","Darwin_i386")
+	make pkg-codec.amd64
+else
+	make pkg-codec.arch
+endif
 
 pkg-codec.amd64:
 	GOOS=linux GOARCH=amd64 DOCKER_BUILD_OPTS="--platform=linux/amd64" make pkg-codec.arch
@@ -90,11 +95,13 @@ pkg-codec.arm64:
 	GOOS=linux GOARCH=arm64 DOCKER_BUILD_OPTS="--platform=linux/arm64" make pkg-codec.arch
 
 pkg-filter:
-    ifeq ("$(os_arch)","Darwin_arm64")
-		DOCKER_BUILD_OPTS="--platform=linux/amd64" make pkg-filter.arch
-    else
-		make pkg-filter.arch
-    endif
+ifeq ("$(os_arch)","Darwin_arm64")
+	make pkg-filter.amd64
+else ifeq ("$(os_arch)","Darwin_i386")
+	make pkg-filter.amd64
+else
+	make pkg-filter.arch
+endif
 
 pkg-filter.amd64:
 	GOOS=linux GOARCH=amd64 DOCKER_BUILD_OPTS="--platform=linux/amd64" make pkg-filter.arch
@@ -103,11 +110,13 @@ pkg-filter.arm64:
 	GOOS=linux GOARCH=arm64 DOCKER_BUILD_OPTS="--platform=linux/arm64" make pkg-filter.arch
 
 pkg-trans:
-    ifeq ("$(os_arch)","Darwin_arm64")
-		DOCKER_BUILD_OPTS="--platform=linux/amd64" make pkg-trans.arch
-    else
-		make pkg-trans.arch
-    endif
+ifeq ("$(os_arch)","Darwin_arm64")
+	make pkg-trans.amd64
+else ifeq ("$(os_arch)","Darwin_i386")
+	make pkg-trans.amd64
+else
+	make pkg-trans.arch
+endif
 
 pkg-trans.amd64:
 	GOOS=linux GOARCH=amd64 DOCKER_BUILD_OPTS="--platform=linux/amd64" make pkg-trans.arch
@@ -149,9 +158,10 @@ clean:
 	@rm -rf build/codecs build/stream_filters build/transcoders build/target
 
 codec.arch:
+	mkdir -p /tmp/go-build-cache
 	docker run --rm ${DOCKER_BUILD_OPTS} \
-	-e COMMIT=$(shell git log -1 --pretty=format:%H | head -c 8) \
 	-e PLUGIN_TARGET=${TARGET} \
+	-e PLUGIN_CODEC_OUTPUT=${CODEC_OUTPUT} \
 	-e PLUGIN_CODEC_PREFIX=${CODEC_PREFIX} \
     -e PLUGIN_STEAM_FILTER_PREFIX=${STEAM_FILTER_PREFIX} \
     -e PLUGIN_TRANSCODER_PREFIX=${TRANSCODER_PREFIX} \
@@ -160,34 +170,40 @@ codec.arch:
 	-e PLUGIN_TRANSCODER=${TRANSCODER} \
 	-e PLUGIN_OS=${PLUGIN_GOOS} \
 	-e PLUGIN_ARCH=${PLUGIN_GOARCH} \
+	-e PLUGIN_GIT_VERSION=${GIT_VERSION} \
 	-v ${FULL_PROJECT_NAME}:/go/src/${PROJECT_NAME} \
 	-v $(shell go env GOPATH)/pkg/mod/:/go/pkg/mod/ \
-	-w /go/src/${PROJECT_NAME} -it ${BUILD_IMAGE} \
+	-v /tmp/go-build-cache:/root/.cache/go-build \
+	-w /go/src/${PROJECT_NAME} ${BUILD_IMAGE} \
 	bash /go/src/${PROJECT_NAME}/etc/script/compile-codec.sh
 
 stream-filter.arch:
+	mkdir -p /tmp/go-build-cache
 	docker run --rm ${DOCKER_BUILD_OPTS} \
-	-e COMMIT=$(shell git log -1 --pretty=format:%H | head -c 8) \
 	-e PLUGIN_STREAM_FILTER=${TARGET} \
 	-e PLUGIN_STEAM_FILTER_PREFIX=${STEAM_FILTER_PREFIX} \
 	-e PLUGIN_PROJECT_NAME=${PROJECT_NAME} \
 	-e PLUGIN_OS=${PLUGIN_GOOS} \
-    -e PLUGIN_ARCH=${PLUGIN_GOARCH} \
-    -v $(shell go env GOPATH)/pkg/mod/:/go/pkg/mod/ \
+	-e PLUGIN_ARCH=${PLUGIN_GOARCH} \
+	-e PLUGIN_GIT_VERSION=${GIT_VERSION} \
+	-v $(shell go env GOPATH)/pkg/mod/:/go/pkg/mod/ \
+	-v /tmp/go-build-cache:/root/.cache/go-build \
 	-v ${FULL_PROJECT_NAME}:/go/src/${PROJECT_NAME} \
 	-w /go/src/${PROJECT_NAME} ${BUILD_IMAGE} \
 	bash /go/src/${PROJECT_NAME}/etc/script/compile-filter.sh
 
 transcoder.arch:
+	mkdir -p /tmp/go-build-cache
 	docker run --rm ${DOCKER_BUILD_OPTS} \
-	-e COMMIT=$(shell git log -1 --pretty=format:%H | head -c 8) \
 	-e PLUGIN_TRANSCODER=${TARGET} \
 	-e PLUGIN_TRANSCODER_PREFIX=${TRANSCODER_PREFIX} \
 	-e PLUGIN_PROJECT_NAME=${PROJECT_NAME} \
 	-e PLUGIN_OS=${PLUGIN_GOOS} \
-    -e PLUGIN_ARCH=${PLUGIN_GOARCH} \
-    -v $(shell go env GOPATH)/pkg/mod/:/go/pkg/mod/ \
+	-e PLUGIN_ARCH=${PLUGIN_GOARCH} \
+	-e PLUGIN_GIT_VERSION=${GIT_VERSION} \
+	 -v $(shell go env GOPATH)/pkg/mod/:/go/pkg/mod/ \
 	-v ${FULL_PROJECT_NAME}:/go/src/${PROJECT_NAME} \
+	-v /tmp/go-build-cache:/root/.cache/go-build \
 	-w /go/src/${PROJECT_NAME} ${BUILD_IMAGE} \
 	bash /go/src/${PROJECT_NAME}/etc/script/compile-transcoder.sh
 
@@ -201,6 +217,7 @@ compile-codec:
 	mv ${PLUGIN_CODEC_OUTPUT} build/codecs/${PLUGIN_TARGET}
 	@cd build/codecs/${PLUGIN_TARGET} && $(shell which md5sum) -b ${PLUGIN_CODEC_OUTPUT} | cut -d' ' -f1  > ${PLUGIN_CODEC_PREFIX}-${PLUGIN_TARGET}.md5
 	cp configs/codecs/${PLUGIN_TARGET}/*.json build/codecs/${PLUGIN_TARGET}
+	@echo "compile codec ${PLUGIN_TARGET} complete"
 
 compile-stream-filter:
 	@rm -rf build/stream_filters/${PLUGIN_TARGET}
@@ -212,6 +229,7 @@ compile-stream-filter:
 	mv ${PLUGIN_STEAM_FILTER_OUTPUT} build/stream_filters/${PLUGIN_TARGET}
 	@cd build/stream_filters/${PLUGIN_TARGET} && $(shell which md5sum) -b ${PLUGIN_STEAM_FILTER_OUTPUT} | cut -d' ' -f1  > ${PLUGIN_STEAM_FILTER_PREFIX}-${PLUGIN_TARGET}.md5
 	cp configs/stream_filters/${PLUGIN_TARGET}/*.json build/stream_filters/${PLUGIN_TARGET}
+	@echo "compile filter ${PLUGIN_TARGET} complete"
 
 compile-transcoder:
 	@rm -rf build/transcoders/${PLUGIN_TARGET}
@@ -223,6 +241,7 @@ compile-transcoder:
 	mv ${PLUGIN_TRANSCODER_OUTPUT} build/transcoders/${PLUGIN_TARGET}
 	@cd build/transcoders/${PLUGIN_TARGET} && $(shell which md5sum) -b ${PLUGIN_TRANSCODER_OUTPUT} | cut -d' ' -f1  > ${PLUGIN_TRANSCODER_PREFIX}-${PLUGIN_TARGET}.md5
 	cp configs/transcoders/${PLUGIN_TARGET}/*.json build/transcoders/${PLUGIN_TARGET}
+	@echo "compile transcoder ${PLUGIN_TARGET} complete"
 
 ant.arch:
 	bash ${FULL_PROJECT_NAME}/etc/ant/stop.sh
@@ -234,10 +253,11 @@ ant.arch:
 	-v $(shell go env GOPATH)/pkg/mod/:/go/pkg/mod/ \
 	-v ${FULL_PROJECT_NAME}:/go/src/${PROJECT_NAME} \
 	-v $(shell go env GOPATH)/src/${SIDECAR_GITLAB_PROJECT_NAME}:/go/src/${SIDECAR_GITLAB_PROJECT_NAME} \
-	-w /go/src/${SIDECAR_GITLAB_PROJECT_NAME} -it ${BUILD_IMAGE} \
+	-w /go/src/${SIDECAR_GITLAB_PROJECT_NAME} ${BUILD_IMAGE} \
 	bash /go/src/${PROJECT_NAME}/etc/script/compile.sh
 
 pkg-codec.arch:
+	mkdir -p /tmp/go-build-cache
 	docker run --rm ${DOCKER_BUILD_OPTS} \
 	-e PLUGIN_CODEC_PREFIX=${CODEC_PREFIX} \
 	-e PLUGIN_CODEC=${TARGET} \
@@ -247,10 +267,14 @@ pkg-codec.arch:
 	-e PLUGIN_BUILD_PLATFORM=$(shell uname) \
 	-e PLUGIN_BUILD_PLATFORM_ARCH=$(shell arch) \
 	-v ${FULL_PROJECT_NAME}:/go/src/${PROJECT_NAME} \
+	-v /tmp/go-build-cache:/root/.cache/go-build \
+	-v $(shell go env GOPATH)/pkg/mod/:/go/pkg/mod/ \
 	-w /go/src/${PROJECT_NAME} ${BASE_IMAGE} \
 	bash /go/src/${PROJECT_NAME}/etc/script/package-codec.sh
+	@echo "package codec ${TARGET} complete"
 
 pkg-filter.arch:
+	mkdir -p /tmp/go-build-cache
 	docker run --rm ${DOCKER_BUILD_OPTS} \
 	-e PLUGIN_STREAM_FILTER=${TARGET} \
 	-e PLUGIN_PROJECT_NAME=${PROJECT_NAME} \
@@ -260,10 +284,14 @@ pkg-filter.arch:
 	-e PLUGIN_BUILD_PLATFORM=$(shell uname) \
 	-e PLUGIN_BUILD_PLATFORM_ARCH=$(shell arch) \
 	-v ${FULL_PROJECT_NAME}:/go/src/${PROJECT_NAME} \
+	-v /tmp/go-build-cache:/root/.cache/go-build \
+	-v $(shell go env GOPATH)/pkg/mod/:/go/pkg/mod/ \
 	-w /go/src/${PROJECT_NAME} ${BASE_IMAGE} \
 	bash /go/src/${PROJECT_NAME}/etc/script/package-filter.sh
+	@echo "package filter ${TARGET} complete"
 
 pkg-trans.arch:
+	mkdir -p /tmp/go-build-cache
 	docker run --rm ${DOCKER_BUILD_OPTS} \
 	-e PLUGIN_TRANSCODER=${TARGET} \
 	-e PLUGIN_TRANSCODER_PREFIX=${TRANSCODER_PREFIX} \
@@ -273,8 +301,11 @@ pkg-trans.arch:
 	-e PLUGIN_BUILD_PLATFORM=$(shell uname) \
 	-e PLUGIN_BUILD_PLATFORM_ARCH=$(shell arch) \
 	-v ${FULL_PROJECT_NAME}:/go/src/${PROJECT_NAME} \
+	-v /tmp/go-build-cache:/root/.cache/go-build \
+	-v $(shell go env GOPATH)/pkg/mod/:/go/pkg/mod/ \
 	-w /go/src/${PROJECT_NAME} ${BASE_IMAGE} \
 	bash /go/src/${PROJECT_NAME}/etc/script/package-transcoder.sh
+	@echo "package transcoder ${TARGET} complete"
 
 pkg-ant.arch:
 	docker run --rm ${DOCKER_BUILD_OPTS} \
